--- a/2/debian-9/Dockerfile
+++ b/2/debian-9/Dockerfile
@@ -47,7 +47,11 @@ ENV ALLOW_PLAINTEXT_LISTENER="no" \
     PATH="/opt/bitnami/java/bin:/opt/bitnami/kafka/bin:$PATH"
 
 EXPOSE 9092
-RUN chown 1001:1001 /bitnami/kafka
+
+RUN mkdir -p /bitnami/kafka
+RUN chown -R 1001:1001 /bitnami/kafka
+RUN chown -R 1001:1001 /opt/bitnami/kafka/
+
 USER 1001
 ENTRYPOINT [ "/app-entrypoint.sh" ]
 CMD [ "/run.sh" ]
